# Evie-Voice-Loop

./: .gitignore  MEMORY.md  README.advanced.md  README.md  SOUL.md  evie-mac.py  evie_tui.py  pyproject.toml
implementation-plans/: streaming-tts-and-fillers.md  tool-calling.md
